--- a/cookbooks/apps/templates/default/sv-apps-run.erb
+++ b/cookbooks/apps/templates/default/sv-apps-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh
 exec 2>&1
-exec chpst -u www-data /opt/verdeeco/apps/<%= @options["appname"]%>/ws/bin/ws
+exec chpst -u www-data <%= @options["bin_path"]%>
