--- a/cookbooks/apps/templates/default/nginx_app.erb
+++ b/cookbooks/apps/templates/default/nginx_app.erb
@@ -7,6 +7,6 @@ server {
   root <%= @config["path"] %>/<%= @config["id"] %>;
   
   location /ws {
-    proxy_pass http://<%= @config["bind"]["address"]:<%= @config["bind"]["port"] %> %>/;
+    proxy_pass http://<%= @config["bind"]["address"] %>:<%= @config["bind"]["port"] %> /;
   }
 }
