lots of couchdb, apps and chef changes

--- a/cookbooks/apps/templates/default/nginx_app.erb
+++ b/cookbooks/apps/templates/default/nginx_app.erb
@@ -4,9 +4,9 @@ server {
   server_name <%= @config["id"] %>.apps.gridasaservice.com;
   listen 80;  
   
-  root <%= @config["path"] %>/<%= @config["id"] %>;
+  root <%= @node[:apps][:install_path] %>/<%= @config["path"] %>/<%= @config["id"] %>;
   
   location /ws {
-    proxy_pass http://<%= @config["bind"]["address"] %>:<%= @config["bind"]["port"] %> /;
+    proxy_pass http://<%= @config["bind"]["address"] %>:<%= @config["bind"]["port"] %>;
   }
 }
